M1-751: Tagger prompt renders the controlled vocabulary in a per-JVM-random order; make it deterministic
TagVocabulary.loadFromDatabase built a LinkedHashSet from `SELECT name
FROM tag ORDER BY name`, then discarded that order by publishing through
Set.copyOf, whose iteration order is randomized per JVM by
ImmutableCollections.SALT. TaggerWorker:547 iterates names() straight
into the tagger prompt's {#tags} block with no intervening sort, so the
Collector sent a differently-ordered tag list to the LLM on every boot,
and two Collectors on the same database sent different prompts. The
asymmetry that makes it sharp: sweepFingerprint already copies into a
TreeSet before hashing, so the re-evaluation fingerprint stayed stable
while the prompt it is meant to characterize did not.

Publish the LinkedHashSet's insertion order through an unmodifiable view
instead. `loaded` never escapes loadFromDatabase, so the view is
effectively immutable, and the pre-existing volatile field supplies the
safe publication Set.copyOf's final fields did; contains() stays an O(1)
hash lookup. The class javadoc now records why the order is load-bearing.

Filed on the determinism argument, not a measured quality impact: a
40-call probe (10 corpus posts x 4 orderings) found no order effect
detectable above the tagger's own sampling noise — same-prompt resample
agreed 5/10 (mean Jaccard 0.783) vs 17/50 (0.728) across orderings, sign
test p ~ 1.0. That is "no large effect", not "no effect"; the argument is
that identical post + vocabulary + model should not produce different
tags across restarts for a reason no operator can see or reproduce.

The new test compares the iteration SEQUENCE against the same query's
projection, after both the startup load and a refresh. A set-equality
assertion passes on the broken code, so it would not have discharged the
acceptance item; a probe over 3 JVMs confirmed Set.copyOf reorders the
25-name shape while set-equality reports true every time.

Reviewed-by: code-r